--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^11.0.1",
     "mysql2": "^3.10.0",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1"
