--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "mssql": "^11.0.1",
     "mysql2": "^3.10.0",
     "node-cron": "^3.0.3",
