--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "node-cron": "^3.0.3",
     "pg": "^8.13.1"
